--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p class="project-tech">HTML, CSS, PHP, MySQL</p>
                         <p class="project-description">Interactive kiosk system for hospital entrance allowing patients to find specialized doctors by illness type with real-time availability.</p>
                         <div class="view-details">
-                            View Details (3 screenshots)
+                            View Details
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
@@ -110,7 +110,7 @@
                         <p class="project-tech">NetBeans, Java, MySQL</p>
                         <p class="project-description">Desktop application for restaurant table management with visual layout, real-time tracking, and automated confirmations.</p>
                         <div class="view-details">
-                            View Details (3 screenshots)
+                            View Details
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
@@ -132,7 +132,7 @@
                         <p class="project-tech">Vite, Tailwind CSS, PHP, MySQL</p>
                         <p class="project-description">Full-featured e-commerce platform for book sales with shopping cart, secure checkout, and comprehensive admin panel.</p>
                         <div class="view-details">
-                            View Details (3 screenshots)
+                            View Details
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
@@ -154,7 +154,7 @@
                         <p class="project-tech">HTML, CSS, PHP, MySQL</p>
                         <p class="project-description">Internal communication platform for hospital departments to manage announcements, events, and departmental updates.</p>
                         <div class="view-details">
-                            View Details (3 screenshots)
+                            View Details
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
