--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <p>Interested in collaborating? I'm always open to discussing new projects and opportunities in web development.</p>
             
             <!-- Contact Form -->
-            <form id="contactForm" class="contact-form">
+            <form id="contactForm" class="contact-form" action="https://formspree.io/f/movbpoow" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
@@ -205,7 +205,7 @@
             
             <!-- Contact Links -->
             <div class="contact-links">
-                <a href="mailto:lyanz.navarette@example.com" class="contact-link">
+                <a href="mailto:navarettelyanzjerome@gmail.com" class="contact-link">
                     <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                         <polyline points="22,6 12,13 2,6"></polyline>
